Create dlq_id and dlq_info and refactor internals
