# src/dlqs/models.py
@@ -3,11 +3,20 @@
 from typing import Any
 
 from ghga_service_commons.utils.utc_dates import UTCDatetime, now_as_utc
-from pydantic import BaseModel, Field
+from pydantic import UUID4, BaseModel, Field
 
 
-class EventInfo(BaseModel):
-    """Model representing GHGA-internal event info"""
+class EventHeaders(BaseModel):
+    """Model representing the headers for an event"""
+
+    headers: dict[str, str] = Field(
+        ...,
+        description="Any headers for the event. Must at least include correlation ID.",
+    )
+
+
+class EventCore(BaseModel):
+    """Model representing the core GHGA-internal event info"""
 
     topic: str = Field(
         ..., description="The name of the original topic the event was located in."
@@ -15,26 +24,34 @@ class EventInfo(BaseModel):
     type_: str = Field(..., description="The 'type' given to the original event.")
     payload: dict[str, Any] = Field(..., description="The payload for the event.")
     key: str = Field(..., description="The key of the event.")
+
+
+class RawDLQEvent(EventCore, EventHeaders):
+    """The core GHGA-internal event info + headers and timestamp, consumed from Kafka"""
+
     timestamp: UTCDatetime = Field(
         default_factory=now_as_utc, description="The timestamp of the event."
     )
-    headers: dict[str, str] = Field(
-        ...,
-        description="Any headers for the event. Must at least include correlation ID.",
-    )
 
 
-class StoredDLQEvent(EventInfo):
-    """Model representing GHGA-internal event info with service name and event ID"""
+class DLQInfo(BaseModel):
+    """Extra DLQ-specific information for a DLQ event"""
 
     service: str = Field(
         ..., description="The name of the service that failed to process the event."
     )
-    event_id: str = Field(
-        ...,
-        description=(
-            "A comma-delimited concatenation of the service, topic, partition,"
-            + " and offset that serves as the unique identifier for the event."
-        ),
-        examples=["ifrs,file-downloads,0,233"],
-    )
+    partition: int = Field(..., description="The partition of the event.")
+    offset: int = Field(..., description="The offset of the event.")
+    exc_class: str = Field("", description="The exception class that was raised.")
+    exc_msg: str = Field("", description="The exception message that was raised.")
+
+
+class StoredDLQEvent(RawDLQEvent):
+    """Model representing a DLQ event as it exists in the database"""
+
+    dlq_id: UUID4 = Field(..., description="The unique DLQS identifier for a DLQ event")
+    dlq_info: DLQInfo = Field(..., description="The DLQ information for the DLQ event")
+
+
+class PublishableEventData(EventCore, EventHeaders):
+    """Only the data needed to publish an event -- core data and headers"""
